[gd_scene load_steps=4 format=3 uid="uid://cul43nr1eb422"]

[ext_resource type="Script" path="res://src/ui/components/minimap/minimap.gd" id="1_072t6"]
[ext_resource type="PackedScene" uid="uid://dkqc3of5bdx2i" path="res://src/ui/components/map_shader/map_shader.tscn" id="2_qm2bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45txs"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Control_Minimap" type="Control"]
layout_mode = 3
anchor_right = 0.1
anchor_bottom = 0.179
offset_left = 15.0
offset_top = 15.0
offset_right = -113.0
offset_bottom = -113.88
size_flags_horizontal = 4
script = ExtResource("1_072t6")

[node name="Panel_Background" type="Panel" parent="."]
custom_minimum_size = Vector2(128, 158)
layout_mode = 0
offset_right = 128.0
offset_bottom = 166.0
theme_override_styles/panel = SubResource("StyleBoxFlat_45txs")

[node name="Control_MapShader" parent="Panel_Background" instance=ExtResource("2_qm2bg")]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.046
anchor_bottom = 0.035
offset_right = 122.112
offset_bottom = 114.19

[node name="ColorRect_Player" type="ColorRect" parent="Panel_Background/Control_MapShader"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -10.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.121569, 0.631373, 1)

[node name="Label_Parcel" type="Label" parent="Panel_Background"]
layout_mode = 0
offset_left = 8.0
offset_top = 128.0
offset_right = 48.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="Button_Menu" type="Button" parent="."]
layout_mode = 0
offset_right = 68.0
offset_bottom = 35.0
focus_mode = 0
text = "Menu"

[connection signal="gui_input" from="Panel_Background/Control_MapShader" to="." method="_on_control_map_shader_gui_input"]
[connection signal="pressed" from="Button_Menu" to="." method="_on_button_menu_pressed"]
